Swagger responses, definitions and public directory done.
